--- a/contact.html
+++ b/contact.html
@@ -98,29 +98,29 @@
                         <p class="d-inline-block bg-dark text-primary py-1 px-4">Contact Us</p>
                         <h1 class="text-uppercase mb-4">Have Any Query? Please Contact Us!</h1>
                         <p class="mb-4"></p>
-                        <form>
+                        <form action="https://formspree.io/f/xgebyakd" method="post">
                             <div class="row g-3">
                                 <div class="col-md-6">
                                     <div class="form-floating">
-                                        <input type="text" class="form-control bg-transparent" id="name" placeholder="Your Name">
+                                        <input type="text" class="form-control bg-transparent" id="name" placeholder="Your Name" name="name" required>
                                         <label for="name">Your Name</label>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-floating">
-                                        <input type="email" class="form-control bg-transparent" id="email" placeholder="Your Email">
+                                        <input type="email" class="form-control bg-transparent" id="email" placeholder="Your Email" name="email" required>
                                         <label for="email">Your Email</label>
                                     </div>
                                 </div>
                                 <div class="col-12">
                                     <div class="form-floating">
-                                        <input type="text" class="form-control bg-transparent" id="subject" placeholder="Subject">
+                                        <input type="text" class="form-control bg-transparent" id="subject" placeholder="Subject" name="subject" required>
                                         <label for="subject">Subject</label>
                                     </div>
                                 </div>
                                 <div class="col-12">
                                     <div class="form-floating">
-                                        <textarea class="form-control bg-transparent" placeholder="Leave a message here" id="message" style="height: 100px"></textarea>
+                                        <textarea class="form-control bg-transparent" name="message" required placeholder="Leave a message here" id="message" style="height: 100px"></textarea>
                                         <label for="message">Message</label>
                                     </div>
                                 </div>
