--- a/about.html
+++ b/about.html
@@ -7,6 +7,10 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
+    <head>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-********" crossorigin="anonymous" />
+      </head>
+      
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -197,8 +201,8 @@
                         <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
                     </div>
                     <div class="d-flex pt-1 m-n1">
-                        <a class="btn btn-lg-square btn-dark text-primary m-1" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-lg-square btn-dark text-primary m-1" href=""><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-lg-square btn-dark text-primary m-1" href="https://www.tiktok.com/@adeboyephillip?_t=8aILFmliOqz&_r=1"><i class="fab fa-tiktok"></i></a>
+                        <a class="btn btn-lg-square btn-dark text-primary m-1" href="https://www.facebook.com/adeboye.phillip"><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-lg-square btn-dark text-primary m-1" href=""><i class="fab fa-youtube"></i></a>
                         <a class="btn btn-lg-square btn-dark text-primary m-1" href="https://www.instagram.com/bigboye_01_lock_cut/">
                             <i class="bi bi-instagram"></i></a>
