--- a/director.html
+++ b/director.html
@@ -41,6 +41,7 @@
 				america
 			</option>
 			<option>
+
 			     canada
 			</option>
 			<option>
@@ -51,7 +52,7 @@
 					
 				   <button style="background-color:purple;color: white;border:none;outline: none;position: relative;top: 13em;right: 12em;border-radius: 30em;width: 8em;height: 3em;">SIGN IN</button>
 				   <p style="position: relative;top: 16em;">Do you have an account ?</p>
-				   <a href="access.html">
+				   <a href="login.html">
 				   	<button  style="position: relative;top: 12.8em;left: 14em;border: none;outline: none;background: purple;color: white;border-radius: 30em;width: 8em;height: 3em;">LOGIN</button>
 				   
 				   </a>
