--- a/index.html
+++ b/index.html
@@ -349,20 +349,24 @@ button.addEventListener("click", showForm);
                 <h1 class="text-uppercase">What Our Clients Say!</h1>
             </div>
             <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
-                <div class="testimonial-item text-center" data-dot="<img class='img-fluid' src='img/testimonial-1.jpg' alt=''>">
-                    <h4 class="text-uppercase">Client Name</h4>
+                <div class="testimonial-item text-center" data-dot=" <img class='img-fluid' src='img/avatar.png' alt=''>">
+                    <h4 class="text-uppercase">segun Adewale </h4>
                     <p class="text-primary">Profession</p>
-                    <span class="fs-5">Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</span>
+                    <span class="fs-5">Always do exactly what I ask for to a great quality. I don't go anywhere else anymore,
+Very professional outfit extremely polite, its always an exciting experience for me, I travel to New York regularly, get fabulous comments about my hair style, keep it up "Guys" BigBoye Haircut.</span>
                 </div>
                 <div class="testimonial-item text-center" data-dot="<img class='img-fluid' src='img/testimonial-2.jpg' alt=''>">
-                    <h4 class="text-uppercase">Client Name</h4>
+                    <h4 class="text-uppercase">James Olamide</h4>
                     <p class="text-primary">Profession</p>
-                    <span class="fs-5">Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</span>
+                    <span class="fs-5">Always a great haircut at a good price!
+                        Went in as a walk-in customer and was seen immediately.
+                        My barber was friendly and listened to what type of cut I wanted and asked all the right questions to make sure it was spot-on!
+                        They're definitely gained a new regular customer!</span>
                 </div>
                 <div class="testimonial-item text-center" data-dot="<img class='img-fluid' src='img/testimonial-3.jpg' alt=''>">
-                    <h4 class="text-uppercase">Client Name</h4>
+                    <h4 class="text-uppercase">La</h4>
                     <p class="text-primary">Profession</p>
-                    <span class="fs-5">Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</span>
+                    <span class="fs-5">This is the best barbers by far and well worth travelling to. I use it all the time for my grandchildren, the haircuts are very good and all the guys in the shop are excellent at their job. My grandson is Autistic and they are very patient and kind to him. I much prefer to go to them than to use any of my local barbers. I highly recommend BigBoye Haircut</span>
                 </div>
             </div>      
         </div>
