--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@ button.addEventListener("click", showForm);
                     <span class="fs-5">Always do exactly what I ask for to a great quality. I don't go anywhere else anymore,
 Very professional outfit extremely polite, its always an exciting experience for me, I travel to New York regularly, get fabulous comments about my hair style, keep it up "Guys" BigBoye Haircut.</span>
                 </div>
-                <div class="testimonial-item text-center" data-dot="<img class='img-fluid' src='img/testimonial-2.jpg' alt=''>">
+                <div class="testimonial-item text-center" data-dot="<img class='img-fluid' src='img/avatar.png' alt=''>">
                     <h4 class="text-uppercase">James Olamide</h4>
                     <p class="text-primary">Profession</p>
                     <span class="fs-5">Always a great haircut at a good price!
@@ -363,8 +363,8 @@ Very professional outfit extremely polite, its always an exciting experience for
                         My barber was friendly and listened to what type of cut I wanted and asked all the right questions to make sure it was spot-on!
                         They're definitely gained a new regular customer!</span>
                 </div>
-                <div class="testimonial-item text-center" data-dot="<img class='img-fluid' src='img/testimonial-3.jpg' alt=''>">
-                    <h4 class="text-uppercase">La</h4>
+                <div class="testimonial-item text-center" data-dot="<img class='img-fluid' src='img/avatar.png' alt=''>">
+                    <h4 class="text-uppercase">Lawrence Chinedu</h4>
                     <p class="text-primary">Profession</p>
                     <span class="fs-5">This is the best barbers by far and well worth travelling to. I use it all the time for my grandchildren, the haircuts are very good and all the guys in the shop are excellent at their job. My grandson is Autistic and they are very patient and kind to him. I much prefer to go to them than to use any of my local barbers. I highly recommend BigBoye Haircut</span>
                 </div>
